@@ -284,16 +284,19 @@ name|UpdateLog
 block|{
 DECL|field|fs
 specifier|private
+specifier|volatile
 name|FileSystem
 name|fs
 decl_stmt|;
 DECL|field|tlogDir
 specifier|private
+specifier|volatile
 name|Path
 name|tlogDir
 decl_stmt|;
 DECL|field|confDir
 specifier|private
+specifier|final
 name|String
 name|confDir
 decl_stmt|;
@@ -301,7 +304,14 @@ DECL|method|HdfsUpdateLog
 specifier|public
 name|HdfsUpdateLog
 parameter_list|()
-block|{        }
+block|{
+name|this
+operator|.
+name|confDir
+operator|=
+literal|null
+expr_stmt|;
+block|}
 DECL|method|HdfsUpdateLog
 specifier|public
 name|HdfsUpdateLog
@@ -316,16 +326,6 @@ name|confDir
 operator|=
 name|confDir
 expr_stmt|;
-block|}
-DECL|method|getFs
-specifier|public
-name|FileSystem
-name|getFs
-parameter_list|()
-block|{
-return|return
-name|fs
-return|;
 block|}
 comment|// HACK
 comment|// while waiting for HDFS-3107, instead of quickly
@@ -586,6 +586,40 @@ name|e
 argument_list|)
 throw|;
 block|}
+block|}
+try|try
+block|{
+if|if
+condition|(
+name|fs
+operator|!=
+literal|null
+condition|)
+block|{
+name|fs
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
 block|}
 try|try
 block|{
